fix: inlinechoice: no overflow for huge hoice labels

--- a/views/scss/qti/_inline-choice.scss
+++ b/views/scss/qti/_inline-choice.scss
@@ -21,8 +21,13 @@ select.qti-inlineChoiceInteraction,
     font-weight: normal !important;
 }
 
-// shadow like focused element
+
 .qti-inlineChoiceInteraction {
+    &.select2-container {
+        max-inline-size: 100%;
+    }
+
+    // shadow like focused element
     .select2-container-active {
         outline-color: $colorWheel-05;
         outline-style: auto;
